designing and logic buiding of pen picker

--- a/index.html
+++ b/index.html
@@ -14,57 +14,359 @@
     <title>Draw</title>
   </head>
   <body onresize="windowResize()">
-    <div class="main_body_container" >
+    <div class="main_body_container">
       <div class="navigation_container">
         <h1 id="draw_font">Draw</h1>
+        <div class="pen_picker_container">
+          <div class="pen_container">
+            <img class="pen" src="./images/pen.svg" alt="img" />
+          </div>
+          <div class="pen_picker_outline">
+            <div class="chose_pen_outline">
+              <div
+                class="chose_pen_outline_inner"
+                style="width: 15%; height: 15%"
+              >
+                <div
+                  class="pen_chose"
+                  onclick="selectPen(event)"
+                  style="background-color: black"
+                  id="1"
+                ></div>
+              </div>
+            </div>
+            <div class="chose_pen_outline">
+              <div
+                class="chose_pen_outline_inner"
+                style="width: 20%; height: 20%"
+              >
+                <div
+                  class="pen_chose"
+                  onclick="selectPen(event)"
+                  style="background-color: black"
+                  id="2"
+                ></div>
+              </div>
+            </div>
+            <div class="chose_pen_outline">
+              <div
+                class="chose_pen_outline_inner"
+                style="width: 25%; height: 25%"
+              >
+                <div
+                  class="pen_chose"
+                  onclick="selectPen(event)"
+                  style="background-color: black"
+                  id="3"
+                ></div>
+              </div>
+            </div>
+            <div class="chose_pen_outline">
+              <div
+                class="chose_pen_outline_inner"
+                style="width: 30%; height: 30%"
+              >
+                <div
+                  class="pen_chose"
+                  onclick="selectPen(event)"
+                  style="background-color: black"
+                  id="4"
+                ></div>
+              </div>
+            </div>
+            <div class="chose_pen_outline">
+              <div
+                class="chose_pen_outline_inner"
+                style="width: 35%; height: 35%"
+              >
+                <div
+                  class="pen_chose"
+                  onclick="selectPen(event)"
+                  style="background-color: black"
+                  id="5"
+                ></div>
+              </div>
+            </div>
+            <div class="chose_pen_outline">
+              <div
+                class="chose_pen_outline_inner"
+                style="width: 40%; height: 40%"
+              >
+                <div
+                  class="pen_chose"
+                  onclick="selectPen(event)"
+                  style="background-color: black"
+                  id="6"
+                ></div>
+              </div>
+            </div>
+            <div class="chose_pen_outline">
+              <div
+                class="chose_pen_outline_inner"
+                style="width: 45%; height: 45%"
+              >
+                <div
+                  class="pen_chose"
+                  onclick="selectPen(event)"
+                  style="background-color: black"
+                  id="7"
+                ></div>
+              </div>
+            </div>
+            <div class="chose_pen_outline">
+              <div
+                class="chose_pen_outline_inner"
+                style="width: 50%; height: 50%"
+              >
+                <div
+                  class="pen_chose"
+                  onclick="selectPen(event)"
+                  style="background-color: black"
+                  id="8"
+                ></div>
+              </div>
+            </div>
+            <div class="chose_pen_outline">
+              <div
+                class="chose_pen_outline_inner"
+                style="width: 55%; height: 55%"
+              >
+                <div
+                  class="pen_chose"
+                  onclick="selectPen(event)"
+                  style="background-color: black"
+                  id="9"
+                ></div>
+              </div>
+            </div>
+            <div class="chose_pen_outline">
+              <div
+                class="chose_pen_outline_inner"
+                style="width: 60%; height: 60%"
+              >
+                <div
+                  class="pen_chose"
+                  onclick="selectPen(event)"
+                  style="background-color: black"
+                  id="10"
+                ></div>
+              </div>
+            </div>
+            <div class="chose_pen_outline">
+              <div
+                class="chose_pen_outline_inner"
+                style="width: 65%; height: 65%"
+              >
+                <div
+                  class="pen_chose"
+                  onclick="selectPen(event)"
+                  style="background-color: black"
+                  id="11"
+                ></div>
+              </div>
+            </div>
+            <div class="chose_pen_outline">
+              <div
+                class="chose_pen_outline_inner"
+                style="width: 70%; height: 70%"
+              >
+                <div
+                  class="pen_chose"
+                  onclick="selectPen(event)"
+                  style="background-color: black"
+                  id="12"
+                ></div>
+              </div>
+            </div>
+            <div class="chose_pen_outline">
+              <div
+                class="chose_pen_outline_inner"
+                style="width: 75%; height: 75%"
+              >
+                <div
+                  class="pen_chose"
+                  onclick="selectPen(event)"
+                  style="background-color: black"
+                  id="13"
+                ></div>
+              </div>
+            </div>
+            <div class="chose_pen_outline">
+              <div
+                class="chose_pen_outline_inner"
+                style="width: 80%; height: 80%"
+              >
+                <div
+                  class="pen_chose"
+                  onclick="selectPen(event)"
+                  style="background-color: black"
+                  id="14"
+                ></div>
+              </div>
+            </div>
+            <div class="chose_pen_outline">
+              <div
+                class="chose_pen_outline_inner"
+                style="width: 85%; height: 85%"
+              >
+                <div
+                  class="pen_chose"
+                  onclick="selectPen(event)"
+                  style="background-color: black"
+                  id="15"
+                ></div>
+              </div>
+            </div>
+            <div class="chose_pen_outline">
+              <div
+                class="chose_pen_outline_inner"
+                style="width: 90%; height: 90%"
+              >
+                <div
+                  class="pen_chose"
+                  onclick="selectPen(event)"
+                  style="background-color: black"
+                  id="16"
+                ></div>
+              </div>
+            </div>
+            <div class="chose_pen_outline">
+              <div
+                class="chose_pen_outline_inner"
+                style="width: 95%; height: 95%"
+              >
+                <div
+                  class="pen_chose"
+                  onclick="selectPen(event)"
+                  style="background-color: black"
+                  id="17"
+                ></div>
+              </div>
+            </div>
+            <div class="chose_pen_outline">
+              <div
+                class="chose_pen_outline_inner"
+                style="width: 100%; height: 100%"
+              >
+                <div
+                  class="pen_chose"
+                  onclick="selectPen(event)"
+                  style="background-color: black"
+                  id="18"
+                ></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="eraser_picker_container">
+          <div class="eraser_container">
+            <img class="eraser" src="./images/eraser.svg" alt="img" />
+          </div>
+          <div class="eraser_picker_outline"></div>
+        </div>
         <div class="color_picker_container">
           <div class="color_outline" style="border: 2px solid black">
-            <div class="color" onclick="selectColor(event)" style="background-color: black;"></div>
+            <div
+              class="color"
+              onclick="selectColor(event)"
+              style="background-color: black"
+            ></div>
           </div>
           <div class="color_outline" style="border: 2px solid transparent">
-            <div class="color" onclick="selectColor(event)" style="background-color: #6c6c6c;"></div>
+            <div
+              class="color"
+              onclick="selectColor(event)"
+              style="background-color: #6c6c6c"
+            ></div>
           </div>
           <div class="color_outline" style="border: 2px solid transparent">
-            <div class="color" onclick="selectColor(event)" style="background-color: #d01313;"></div>
+            <div
+              class="color"
+              onclick="selectColor(event)"
+              style="background-color: #d01313"
+            ></div>
           </div>
           <div class="color_outline" style="border: 2px solid transparent">
-            <div class="color" onclick="selectColor(event)" style="background-color: #922E2E;"></div>
+            <div
+              class="color"
+              onclick="selectColor(event)"
+              style="background-color: #922e2e"
+            ></div>
           </div>
           <div class="color_outline" style="border: 2px solid transparent">
-            <div class="color" onclick="selectColor(event)" style="background-color: #E8F278;"></div>
+            <div
+              class="color"
+              onclick="selectColor(event)"
+              style="background-color: #e8f278"
+            ></div>
           </div>
           <div class="color_outline" style="border: 2px solid transparent">
-            <div class="color" onclick="selectColor(event)" style="background-color: #4057D3;"></div>
+            <div
+              class="color"
+              onclick="selectColor(event)"
+              style="background-color: #4057d3"
+            ></div>
           </div>
           <div class="color_outline" style="border: 2px solid transparent">
-            <div class="color" onclick="selectColor(event)" style="background-color: #8AE76A;"></div>
+            <div
+              class="color"
+              onclick="selectColor(event)"
+              style="background-color: #8ae76a"
+            ></div>
           </div>
           <div class="color_outline" style="border: 2px solid transparent">
-            <div class="color" onclick="selectColor(event)" style="background-color: #17B23A;"></div>
+            <div
+              class="color"
+              onclick="selectColor(event)"
+              style="background-color: #17b23a"
+            ></div>
           </div>
           <div class="color_outline" style="border: 2px solid transparent">
-            <div class="color" onclick="selectColor(event)" style="background-color: #BB28BE;"></div>
+            <div
+              class="color"
+              onclick="selectColor(event)"
+              style="background-color: #bb28be"
+            ></div>
           </div>
           <div class="color_outline" style="border: 2px solid transparent">
-            <div class="color" onclick="selectColor(event)" style="background-color: #1BD3EC;"></div>
+            <div
+              class="color"
+              onclick="selectColor(event)"
+              style="background-color: #1bd3ec"
+            ></div>
           </div>
           <div class="color_outline" style="border: 2px solid transparent">
-            <div class="color" onclick="selectColor(event)" style="background-color: #E04C8A;"></div>
+            <div
+              class="color"
+              onclick="selectColor(event)"
+              style="background-color: #e04c8a"
+            ></div>
           </div>
           <div class="color_outline" style="border: 2px solid transparent">
-            <div class="color" onclick="selectColor(event)" style="background-color: #312676;"></div>
+            <div
+              class="color"
+              onclick="selectColor(event)"
+              style="background-color: #312676"
+            ></div>
           </div>
           <div class="color_outline" style="border: 2px solid transparent">
-            <div class="color" onclick="selectColor(event)" style="background-color: #FAC746;"></div>
+            <div
+              class="color"
+              onclick="selectColor(event)"
+              style="background-color: #fac746"
+            ></div>
           </div>
           <div class="color_outline" style="border: 2px solid transparent">
-            <div class="color" onclick="selectColor(event)" style="background-color: white;"></div>
-          </div>
+            <div
+              class="color"
+              onclick="selectColor(event)"
+              style="background-color: white"
+            ></div>
           </div>
         </div>
       </div>
       <div class="drawing_container">
-        <canvas class="canvas" ></canvas>
+        <canvas class="canvas"></canvas>
       </div>
     </div>
     <script src="Javascript/script.js"></script>
